nested/yesIncomingRemote.json
{
  "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {
    "Name": {
      "type": "string"
    },
    "virtualMachineLocation":{
      "type": "string"
    }
  },
  "variables": {
    "networkSecurityGroupName": "[concat(parameters('Name'), 'nsg')]",
    "publicIPAddressName": "[concat(parameters('Name'), '-ip')]",
    "dnsLabelPrefix": "[concat(toLower(parameters('Name')), uniquestring(resourceGroup().id, parameters('Name')))]"
  },
  "resources": [
    {
      "apiVersion": "2016-03-30",
      "type": "Microsoft.Network/publicIPAddresses",
      "name": "[variables('publicIPAddressName')]",
      "location": "[parameters('virtualMachineLocation')]",
      "tags": {
            "vmname": "[parameters('Name')]"
      },
      "properties": {
        "publicIPAllocationMethod": "Dynamic",
        "dnsSettings": {
          "domainNameLabel": "[variables('dnsLabelPrefix')]"
        }
      }
    },
    {
      "name": "[variables('networkSecurityGroupName')]",
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2016-09-01",
      "location": "[resourceGroup().location]",
      "tags": {
            "vmname": "[parameters('Name')]"
      },
      "properties": {
        "securityRules": [
          {
            "name": "default-allow-rdp",
            "properties": {
                "priority": 1000,
                "sourceAddressPrefix": "*",
                "protocol": "TCP",
                "destinationPortRange": "3389",
                "access": "Allow",
                "direction": "Inbound",
                "sourcePortRange": "*",
                "destinationAddressPrefix": "*"
            }
          },
          {
            "name": "ResourceManager",
            "properties": {
                "priority": 1010,
                "sourceAddressPrefix": "*",
                "protocol": "TCP",
                "destinationPortRange": "8050",
                "access": "Allow",
                "direction": "Inbound",
                "sourcePortRange": "*",
                "destinationAddressPrefix": "*"
            }
          }
        ]
      }
    }
  ]
}
